# ghostpost

./: README.md  pyproject.toml
ghostpost/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
templates/: boast.html  genericform.html  homepage.html  roast.html  sorted.html
