[tool.poetry]
name = "ghostpost"
version = "0.1.0"
description = ""
authors = ["Ben McKenzie <bmckenzie0522@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "^3.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
